# doggo-ai

./: .gitignore  README.md  base_trainer.py  coco_inference.py  efficientnet_b7_trainer.py  inception_resnet_v2_trainer.py  inception_v3_trainer.py  predict-grad.py  predict.py  pyproject.toml  resnet50_trainer.py  train-dogs.py  train-v3.py  train.py  vgg19_trainer.py
cmd/: chat.py  classify.py  coco_detect.py  coco_inference.py  predict.py  train.py
llms/: __init__.py  chat_client_interface.py  client_factory.py  client_interface.py  gem_client.py  gem_image_client.py  image_client_interface.py  ollama_client.py  prompts.py
predictors/: image_predictor.py
processors/: __init__.py  coco_object_detector.py  image_classifier.py  image_predictor.py  image_processor.py
services/: chat_service.py  classification_service.py
trainers/: __init__.py  abstract_trainer.py  base_trainer.py  custom_trainer.py  efficientnet_b7_trainer.py  inception_resnet_v2_trainer.py  inception_v3_trainer.py  model_factory.py  resnet50_trainer.py  trainer_factory.py  vgg19_trainer.py
